questions.md added

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
+.mainDiv{
   text-align: center;
+  margin: 0 auto;
+  max-width: 90%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.lineList{
+  max-width: 60%;
+  border-color: rgb(190, 190, 190);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.cityName{
+  text-align: left !important;
+  max-width: 50%;
+  padding-left: 80px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputForm{
+  padding-bottom: 10px;
 }
