--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,34 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("/font/Roboto-Regular.ttf");
+  src: url("/fonts/Roboto-Regular.eot?#iefix");
+  font-weight: 400;
+  font-style: normal;
+}
+
+body{
+  font-family: "Roboto";
+}
+
+h1, h2, h3, h4, h5{
+  font-family: "Roboto";
+}
+
 .mainDiv{
   text-align: center;
   margin: 0 auto;
   max-width: 90%;
+  font-family: "Roboto";
 }
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+li{
+  font-family: "Roboto";
 }
 
 .lineList{
@@ -23,4 +44,14 @@ ul {
 
 .inputForm{
   padding-bottom: 10px;
+}
+
+#react-paginate ul {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#react-paginate li {
+  display: inline-block;
 }
